# xls-dsl

./: .gitignore  angular.json  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: dev.yml
src/: index.html  styles.css
src-tauri/: .env  Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/data/: extraLib.js
src-tauri/icons/: icon.icns
src-tauri/migrations/2023-12-12-122533_create_file/: down.sql  up.sql
src-tauri/resources/: core.js
src-tauri/src/: lib.rs  main.rs
src-tauri/src/collections/: lib.rs
src-tauri/src/dao/: db.rs  file_dao.rs  mod.rs  models.rs  schema.rs
src-tauri/src/handlers/: handler.rs  mod.rs
src-tauri/src/parse_xls/: lib.rs
src-tauri/src/v8/: lib.rs  mod.rs  test.js
src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts
src/app/directive/: input-no-space.directive.spec.ts  input-no-space.directive.ts
src/app/enums/: message-type.ts  mq-type.ts
src/app/modal/: file-info.ts  message.ts  mq-message.ts  run-log.ts
src/app/plugin/codicon/: codicon.component.css  codicon.component.html  codicon.component.spec.ts  codicon.component.ts
src/app/plugin/dialog/: dialog.component.css  dialog.component.html  dialog.component.spec.ts  dialog.component.ts
src/app/plugin/menu/: menu.component.html  menu.component.spec.ts  menu.component.ts
src/app/plugin/monaco-editor/: monaco-editor.component.css  monaco-editor.component.html  monaco-editor.component.spec.ts  monaco-editor.component.ts
src/app/plugin/terminal/: terminal.component.html  terminal.component.ts
src/app/service/: message.service.ts
src/app/view/xls-editor/: xls-editor.component.css  xls-editor.component.html  xls-editor.component.spec.ts  xls-editor.component.ts
