[package]
name = "xls-dsl"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.4.3", features = [ "macos-private-api", "dialog-message", "clipboard-all", "dialog-ask", "dialog-open", "window-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
boa_engine = "0.17.3"
reqwest = { version = "0.11.22", features = ["json", "cookies", "stream"] }
calamine = "0.23.1"
anyhow = "1.0.75"
actix-rt = "2.9.0"
boa_parser = "0.17.3"
boa_interner = "0.17.3"
boa_ast = "0.17.3"
lazy_static = "1.4.0"
diesel = {version = "2.1.4", features = ["sqlite", "chrono"] }
chrono = {version = "0.4.31", features = ["serde"] }
env = "0.0.0"
diesel_migrations = "2.1.0"
dirs = "5.0.1"
sonyflake = "0.2.0"
uuid = {version = "1.6.1", features = ["v4"] }

[dependencies.rusqlite]
version = "0.30.0"
features = ["bundled"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
