[package]
name = "xls-dsl"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha", features = [ "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
calamine = "0.23.1"
anyhow = "1.0.75"
actix-rt = "2.9.0"
lazy_static = "1.4.0"
diesel = {version = "2.1.4", features = ["sqlite", "chrono"] }
chrono = {version = "0.4.31", features = ["serde"] }
env = "0.0.0"
diesel_migrations = "2.1.0"
dirs = "5.0.1"
sonyflake = "0.2.0"
uuid = {version = "1.6.1", features = ["v4"] }
md5 = "0.7.0"
v8 = "0.82.0"
serde_v8 = "0.148.0"
tauri-plugin-clipboard-manager = "2.0.0-alpha.6"
tauri-plugin-dialog = "2.0.0-alpha.7"
tauri-plugin-notification = "2.0.0-alpha.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
